--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cohere-ai": "^7.14.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2"
